# namis

./: .env.example  .gitignore  add_es_deudor_column.sql  docker-compose.yml  migrate_add_es_deudor.py  pyproject.toml  requirements.txt  schema.sql  streamlit_app.py
scripts/: check_db_tables.py  ejemplo_balance.py  ejemplo_insumos.py  ejemplo_promociones.py  ejemplo_recetas.py  ejemplo_ventas.py  run_sqlite_verify.bat  verificar_promociones.py  verify_db.py
src/namis/: __init__.py  config.py  database.py  exceptions.py
src/namis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/namis/models/: __init__.py  base.py  cliente.py  detalle_venta.py  insumo.py  insumo_historial.py  producto.py  promocion.py  promocion_requisito.py  receta.py  venta.py
src/namis/schemas/: balance.py  insumos.py  promociones.py  recetas.py  ventas.py
src/namis/services/: __init__.py  balance.py  clientes.py  costos.py  insumo_precios.py  insumos.py  productos.py  promociones.py  recetas.py  ventas.py
src/namis/utils/: money.py
