[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "namis"
version = "0.1.0"
description = "Gestion yogurteria Namis - capa de datos SQLAlchemy"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "pymysql>=1.1,<2",
    "cryptography>=41,<47",
    "python-dotenv>=1.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
